Adds geoid correction to altitude values. Moves all UI strings to resources and provides translations to German and Finnish. Fixes some Android lint issues.